--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -8,7 +8,6 @@
     rgba(255, 190, 119, 0.3),
     rgba(255, 113, 56, 0.5)
   );
-  border-radius: 20px;
   box-shadow: 0 12px 25px rgba(0, 0, 0, 0.1);
   color: black;
   max-width: 100%;
@@ -18,7 +17,7 @@
 }
 
 .explore-menu h1 {
-  color: black;
+  color: white;
   font-size: 36px;
   font-weight: 600;
   text-align: center;
@@ -30,7 +29,7 @@
 }
 
 .explore-menu-text {
-  color: black;
+  color: white;
   font-size: 18px;
   text-align: center;
   line-height: 1.6;
@@ -66,7 +65,7 @@
   transition: transform 0.3s ease, box-shadow 0.4s ease, filter 0.3s ease;
   border-radius: 12px;
   overflow: hidden;
-  background: black;
+  background: linear-gradient(135deg, #1f1f1f, #121212);
   padding: 10px;
   width: 140px;
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
@@ -82,7 +81,7 @@
 .explore-menu-list-item img {
   width: 90px;
   height: 90px;
-  border-radius: 50%;
+  border-radius: 100%;
   object-fit: cover;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
