--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   height: 34vw;
   margin: 30px auto;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../../assets/d.png) center/cover no-repeat;
+    center/cover no-repeat;
   position: relative;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
   overflow: hidden;
@@ -14,13 +14,21 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   gap: 2vw;
   max-width: 60%;
   bottom: 12%;
   left: 8vw;
-  animation: fadeIn 3s;
-  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+.slider-item {
+  width: 100%;
+  height: 100%;
+}
+
+.slider-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .header-contents h2 {
