--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -18,6 +18,7 @@
   display: flex;
   list-style: none;
   gap: 20px;
+  margin-right: 340px;
 }
 
 .navbar-menu a {
@@ -31,6 +32,7 @@
 .navbar-menu .active {
   padding-bottom: 2px;
   border-bottom: 2px solid black;
+  background-color: #ff4c24;
 }
 .navbar-menu a:hover {
   background: linear-gradient(90deg, #ff4c24, #ff4c24);
@@ -112,6 +114,11 @@
   background-color: gray;
   height: 1px;
   border: none;
+}
+@media (max-width: 425px) {
+  .navbar .logo {
+    width: 10px;
+  }
 }
 @media (max-width: 1050px) {
   .navbar .logo {
