--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -3,15 +3,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: whitesmoke;
+  background-color: white;
   width: 100%;
 }
 
 .navbar .logo {
   margin-left: 100px;
-  width: 80px;
-  border-radius: 100%;
-  border: 1px white;
+  width: 190px;
+  height: 90px;
 }
 
 .navbar-menu {
