--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  color: #d9d9d9;
-  background-color: #323232;
+  color: black;
+  background-color: rgb(202, 202, 202);
   display: flex;
   flex-direction: column;
   align-items: center;
