--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -3,11 +3,7 @@
   flex-direction: column;
   gap: 30px;
   padding: 60px 30px;
-  background: radial-gradient(
-    circle,
-    rgba(255, 190, 119, 0.3),
-    rgba(255, 113, 56, 0.5)
-  );
+  background: black;
   box-shadow: 0 12px 25px rgba(0, 0, 0, 0.1);
   color: black;
   max-width: 100%;
