--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -4,16 +4,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: whitesmoke;
+  background-color: white;
   width: 100%;
 }
 
 /* Logo styling */
 .navbar .logo {
   margin-left: 100px;
-  width: 80px;
-  border-radius: 100%;
+  width: 124px;
   border: 1px white;
+  height: 50px;
 }
 
 /* Menu styling */
