--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -2,14 +2,14 @@
   margin: 60px auto;
   max-width: 1200px;
   padding: 30px;
-  background: #121212;
+  background: white;
   border-radius: 12px;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1);
 }
 
 .cart hr {
   height: 1px;
-  background-color: #121212;
+  background-color: black;
   border: none;
 }
 
@@ -17,13 +17,13 @@
   display: grid;
   grid-template-columns: 1fr 2fr 1.5fr 1fr 1fr 0.8fr;
   align-items: center;
-  color: whitesmoke;
+  color: black;
   font-size: 16px;
   font-weight: 600;
   text-transform: uppercase;
   margin-bottom: 15px;
   padding-bottom: 10px;
-  border-bottom: 2px solid #f2f2f2;
+  border-bottom: 2px solid black;
 }
 
 .cart-items-item {
