--- a/frontend/src/components/AppDownload/AppDownload.css
+++ b/frontend/src/components/AppDownload/AppDownload.css
@@ -1,4 +1,4 @@
-.app-download {
+/* .app-download {
   margin: 100px auto;
   font-size: max(3vw, 20px);
   text-align: center;
@@ -55,4 +55,4 @@
   to {
     opacity: 1;
   }
-}
+} */
