--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  color: black;
-  background-color: rgb(202, 202, 202);
+  color: #fff;
+  background-color: #1f1f1f;
   display: flex;
   flex-direction: column;
   align-items: center;
