--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -2,14 +2,14 @@
   margin: 60px auto;
   max-width: 1200px;
   padding: 30px;
-  background: white;
+  background: #1f1f1f;
   border-radius: 12px;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1);
 }
 
 .cart hr {
   height: 1px;
-  background-color: black;
+  background-color: white;
   border: none;
 }
 
@@ -17,7 +17,7 @@
   display: grid;
   grid-template-columns: 1fr 2fr 1.5fr 1fr 1fr 0.8fr;
   align-items: center;
-  color: black;
+  color: white;
   font-size: 16px;
   font-weight: 600;
   text-transform: uppercase;
@@ -173,9 +173,10 @@
   padding: 12px;
   font-size: 14px;
   border: 1px solid #ddd;
+  color: white;
   border-radius: 5px;
   outline: none;
-  background-color: #f9f9f9;
+  background-color: #1f1f1f;
   transition: all 0.3s ease;
 }
 
