--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -4,9 +4,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #1f1f1f;
-  color: #fff; 
-  
+  background-color: black;
+  color: #fff;
+
   width: 100%;
   border-radius: 8px;
 }
