--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -5,18 +5,21 @@
   box-sizing: border-box;
   font-family: Outfit;
 }
+.app{
+  background-color: #121212;
+}
 body {
   min-height: 100vh;
-  background-color: white;
+  background-color: #121212;
 }
 a {
   text-decoration: none;
-  color: inherit;
+  /* color: inherit; */
 }
 hr {
   border: none;
   height: 1px;
-  background-color: #a9a9a9;
+  background-color: #000;
 }
 .app-content {
   display: flex;
