--- a/admin/src/pages/Orders/Orders.css
+++ b/admin/src/pages/Orders/Orders.css
@@ -6,14 +6,14 @@
   margin: 30px 0;
   border: 1px solid #f08080;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: #121212;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   color: #505050;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 h3 {
-  color: #333;
+  color: #fff;
 }
 
 .order-item:hover {
@@ -24,12 +24,13 @@ h3 {
 .order-item-food,
 .order-item-name {
   font-weight: 600;
+  color: #fff;
 }
 
 .order-item-name {
   margin-top: 15px;
   margin-bottom: 5px;
-  color: #333;
+  color: #fff;
 }
 
 .order-item-address {
