--- a/frontend/src/pages/MyOrders/MyOrders.css
+++ b/frontend/src/pages/MyOrders/MyOrders.css
@@ -2,7 +2,7 @@
   margin: 60px auto;
   padding: 30px;
   max-width: 1200px;
-  background-color: #f9f9f9;
+  background-color: #121212;
   border-radius: 12px;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1);
 }
@@ -15,7 +15,7 @@
 }
 
 .my-orders h2 {
-  color: #000;
+  color: #fff;
 }
 .my-orders-order {
   display: grid;
@@ -23,12 +23,13 @@
   gap: 30px;
   font-size: 14px;
   padding: 15px 25px;
-  background-color: #fff;
-  border: 1px solid #f2f2f2;
+  background-color: #121212;
+  
   border-radius: 8px;
-  color: #454545;
+  color: #fff;
   transition: all 0.3s ease;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+
 }
 
 .my-orders-order:hover {
@@ -46,11 +47,12 @@
 .my-orders-order p span {
   color: tomato;
   font-weight: bold;
+
 }
 
 .my-orders-order p b {
   font-weight: 600;
-  color: #333;
+  color: #fff;
 }
 
 .my-orders button {
