--- a/frontend/src/pages/PlaceOrder/PlaceOrder.css
+++ b/frontend/src/pages/PlaceOrder/PlaceOrder.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   gap: 60px;
   margin: 100px 0;
-  background-color: #f9f9f9;
+  background-color: #121212;
   padding: 30px;
   border-radius: 12px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
@@ -19,7 +19,7 @@
   font-size: 32px;
   font-weight: 600;
   margin-bottom: 40px;
-  color: #333;
+  color: #fff;
 }
 
 .place-order-left input {
@@ -31,6 +31,8 @@
   border-radius: 8px;
   outline: none;
   transition: border-color 0.3s ease;
+  background-color: #121212;
+  color: white;
 }
 
 .place-order-left input:focus {
@@ -58,6 +60,7 @@
   font-weight: 600;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  gap: 5px;
 }
 
 .place-order-submit:hover {
@@ -65,6 +68,7 @@
 }
 
 .payment {
+  
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -74,7 +78,7 @@
   font-size: 24px;
   font-weight: 600;
   margin-bottom: 20px;
-  color: #333;
+  color: #fff;
 }
 
 .payment .payment-option {
@@ -83,16 +87,14 @@
   gap: 15px;
   padding: 15px;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: #121212;
   border: 1px solid #eee;
   min-width: 320px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
-.payment .payment-option:hover {
-  background-color: #ffe7de;
-}
+
 
 @media (max-width: 700px) {
   .place-order {
